Fix #73; break inline code if necessary

--- a/static/styles/all.sass
+++ b/static/styles/all.sass
@@ -75,6 +75,7 @@ pre
 
 code
   font-family: 'Menlo', 'Consolas', monospace
+  word-wrap: break-word
 
 em
   font-style: italic
